--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ llama-cpp-2 = "0.1"
 rfd = "0.15"
 log = "0.4"
 env_logger = "0.11"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
